PROJECT(chat_client)
FIND_PACKAGE(Qt4 REQUIRED)
SET(SOURCES main.cpp)
SET(HEADERS header.h)
QT4_WRAP_CPP(HEADERS_MOC ${HEADERS})
INCLUDE(${QT_USE_FILE)
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_EXECUTABLE(chat_client ${SOURCES} ${HEADERS_MOC})
TARGET_LINK_LIBRARIES(chat_client ${QT_LIBRARIES})
SET(QT_USE_QTNETWORK TRUE)
