CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
PROJECT(chat_client)

SET(QT_USE_QTDBUS TRUE)
SET(QT_USE_QTGUI TRUE)
FIND_PACKAGE(Qt4 REQUIRED)
SET(QT_USE_QTDBUS TRUE)
SET(QT_USE_QTGUI TRUE)
FIND_PACKAGE(TelepathyQt4 REQUIRED)

INCLUDE_DIRECTORIES(
  ${TELEPATHY_QT4_INCLUDE_DIR}/..
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
)


SET(SOURCES main.cpp roster.cpp debug.cpp window.cpp account_manager.cpp account_model.cpp account.cpp)
SET(HEADERS main.h roster.h debug.h window.h account_manager.h account_model.h account.h)

QT4_WRAP_CPP(HEADERS_MOC ${HEADERS})

INCLUDE(${QT_USE_FILE})

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_EXECUTABLE(chat_client ${SOURCES} ${HEADERS_MOC})
TARGET_LINK_LIBRARIES(chat_client ${QT_LIBRARIES} ${TELEPATHY_QT4_LIBRARIES})
